# cmake-template

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  future.cpp  hello.cpp  lambda.cpp  rvalue.cpp  sum.cpp  thread.cpp
test/: CMakeLists.txt
